More small fixes.

--- a/autoregressive.ipynb
+++ b/autoregressive.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "import torch"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "import torch.nn as nn"
@@ -47,12 +47,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "outputs": [],
    "source": [
-    "\n",
-    "import torch.nn.functional as F\n",
-    "import torch.optim as optim\n",
+    "import torch.nn.functional as F"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [],
+   "source": [
+    "import torch.optim as optim"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [],
+   "source": [
     "import torch.distributions as dist"
    ],
    "metadata": {
@@ -64,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "n=150000\n",
@@ -79,8 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 36,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dictionary:{'.pad': 0, '.start': 1, '.end': 2, '.unk': 3, '!': 4, 'v': 5, 'b': 6, 'u': 7, 'k': 8, 's': 9, 'c': 10, 'm': 11, 'a': 12, 'l': 13, 'w': 14}\n",
+      "Index:['.pad', '.start', '.end', '.unk', '!', 'v', 'b', 'u', 'k', 's', 'c', 'm', 'a', 'l', 'w']\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'Dictionary:{w2i}')\n",
     "print(f'Index:{i2w}')"
@@ -94,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "def print_sequence(x_train, i):\n",
@@ -109,8 +143,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 38,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequence #132514: sabc!abc!abc!abc!abc!abc!abc!s\n",
+      "Sequence #  8670: ss\n",
+      "Sequence #  2504: ss\n",
+      "Sequence #110868: sabc!abc!abc!abc!s\n",
+      "Sequence # 98074: sklm!klm!klm!s\n",
+      "Sequence # 52135: sklm!s\n",
+      "Sequence # 62973: sabc!s\n",
+      "Sequence # 67071: suvw!uvw!s\n",
+      "Sequence # 16084: ss\n",
+      "Sequence #123280: sklm!klm!klm!klm!klm!s\n"
+     ]
+    }
+   ],
    "source": [
     "for i in np.random.randint(n, size=10):\n",
     "    print_sequence(x_train, i)"
@@ -124,8 +175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 39,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[9, 12, 6, 10, 4, 12, 6, 10, 4, 9]"
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_train[74191]"
    ],
@@ -138,7 +198,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
+   "outputs": [],
+   "source": [
+    "vocab_size=len(w2i)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [],
+   "source": [
+    "embedding_size = 32\n",
+    "hidden_size = 16\n",
+    "lstm_num_layers = 1"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "outputs": [],
+   "source": [
+    "class Net(nn.Module):\n",
+    "    def __init__(self,\n",
+    "                 vocab_size,\n",
+    "                 embedding_size,\n",
+    "                 hidden_size,\n",
+    "                 lstm_num_layers) -> None:\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.embed = nn.Embedding(vocab_size, embedding_size)\n",
+    "        self.lstm = nn.LSTM(embedding_size, hidden_size, lstm_num_layers, batch_first=True)\n",
+    "        self.linear = nn.Linear(hidden_size, vocab_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        input = self.embed(x)\n",
+    "        lstm_output, (hn, cn) = self.lstm(input)\n",
+    "        output = self.linear(lstm_output)\n",
+    "        return output"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "outputs": [],
+   "source": [
+    "net =  Net(vocab_size, embedding_size, hidden_size, lstm_num_layers)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Net(\n  (embed): Embedding(15, 32)\n  (lstm): LSTM(32, 16, batch_first=True)\n  (linear): Linear(in_features=16, out_features=15, bias=True)\n)"
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "outputs": [],
    "source": [
     "def batch_length(batch):\n",
@@ -153,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "outputs": [],
    "source": [
     "def add_padding(seq, amt=1):\n",
@@ -170,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "outputs": [],
    "source": [
     "def add_start(seq):\n",
@@ -186,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "outputs": [],
    "source": [
     "def add_end(seq):\n",
@@ -202,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "outputs": [],
    "source": [
     "def preprocess_batch(batch):\n",
@@ -232,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "outputs": [],
    "source": [
     "# def batch_generator(data, max_number_of_tokens=128):\n",
@@ -255,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "outputs": [],
    "source": [
     "def batch_generator(data, batch_size=128):\n",
@@ -282,8 +439,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 76,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/pp/cdyfs0g13j3_15mc99_0nfmh0000gn/T/ipykernel_41123/532775599.py:13: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  targets = torch.tensor(upd_batch, dtype=torch.long)[:, 1:]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "(tensor([[1, 9, 9, 2],\n         [1, 9, 9, 2],\n         [1, 9, 9, 2],\n         [1, 9, 9, 2],\n         [1, 9, 9, 2]]),\n tensor([[9, 9, 2, 0],\n         [9, 9, 2, 0],\n         [9, 9, 2, 0],\n         [9, 9, 2, 0],\n         [9, 9, 2, 0]]))"
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "batch_t, target_t = preprocess_batch(x_train[:5])\n",
     "batch_t, target_t"
@@ -297,101 +471,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 77,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[[ 0.0250,  0.1825, -0.0726, -0.0624, -0.1122, -0.2633,  0.1887,\n          -0.1222, -0.1818, -0.0588, -0.1243, -0.2717,  0.2647, -0.0008,\n          -0.0827],\n         [ 0.0737,  0.0620, -0.1059,  0.0104,  0.0229, -0.3546,  0.2105,\n           0.0421, -0.3234, -0.0183, -0.0643, -0.2593,  0.1713, -0.0112,\n          -0.1340],\n         [ 0.1400,  0.0787, -0.1382,  0.0712,  0.0991, -0.3531,  0.1966,\n           0.0918, -0.2964,  0.0100, -0.0681, -0.2550,  0.1680, -0.0317,\n          -0.1518],\n         [ 0.1828,  0.1128, -0.0863,  0.2503,  0.2203, -0.1676,  0.2259,\n           0.0418, -0.1701,  0.0978,  0.1026, -0.0681,  0.0622,  0.0215,\n          -0.2344]],\n\n        [[ 0.0250,  0.1825, -0.0726, -0.0624, -0.1122, -0.2633,  0.1887,\n          -0.1222, -0.1818, -0.0588, -0.1243, -0.2717,  0.2647, -0.0008,\n          -0.0827],\n         [ 0.0737,  0.0620, -0.1059,  0.0104,  0.0229, -0.3546,  0.2105,\n           0.0421, -0.3234, -0.0183, -0.0643, -0.2593,  0.1713, -0.0112,\n          -0.1340],\n         [ 0.1400,  0.0787, -0.1382,  0.0712,  0.0991, -0.3531,  0.1966,\n           0.0918, -0.2964,  0.0100, -0.0681, -0.2550,  0.1680, -0.0317,\n          -0.1518],\n         [ 0.1828,  0.1128, -0.0863,  0.2503,  0.2203, -0.1676,  0.2259,\n           0.0418, -0.1701,  0.0978,  0.1026, -0.0681,  0.0622,  0.0215,\n          -0.2344]],\n\n        [[ 0.0250,  0.1825, -0.0726, -0.0624, -0.1122, -0.2633,  0.1887,\n          -0.1222, -0.1818, -0.0588, -0.1243, -0.2717,  0.2647, -0.0008,\n          -0.0827],\n         [ 0.0737,  0.0620, -0.1059,  0.0104,  0.0229, -0.3546,  0.2105,\n           0.0421, -0.3234, -0.0183, -0.0643, -0.2593,  0.1713, -0.0112,\n          -0.1340],\n         [ 0.1400,  0.0787, -0.1382,  0.0712,  0.0991, -0.3531,  0.1966,\n           0.0918, -0.2964,  0.0100, -0.0681, -0.2550,  0.1680, -0.0317,\n          -0.1518],\n         [ 0.1828,  0.1128, -0.0863,  0.2503,  0.2203, -0.1676,  0.2259,\n           0.0418, -0.1701,  0.0978,  0.1026, -0.0681,  0.0622,  0.0215,\n          -0.2344]],\n\n        [[ 0.0250,  0.1825, -0.0726, -0.0624, -0.1122, -0.2633,  0.1887,\n          -0.1222, -0.1818, -0.0588, -0.1243, -0.2717,  0.2647, -0.0008,\n          -0.0827],\n         [ 0.0737,  0.0620, -0.1059,  0.0104,  0.0229, -0.3546,  0.2105,\n           0.0421, -0.3234, -0.0183, -0.0643, -0.2593,  0.1713, -0.0112,\n          -0.1340],\n         [ 0.1400,  0.0787, -0.1382,  0.0712,  0.0991, -0.3531,  0.1966,\n           0.0918, -0.2964,  0.0100, -0.0681, -0.2550,  0.1680, -0.0317,\n          -0.1518],\n         [ 0.1828,  0.1128, -0.0863,  0.2503,  0.2203, -0.1676,  0.2259,\n           0.0418, -0.1701,  0.0978,  0.1026, -0.0681,  0.0622,  0.0215,\n          -0.2344]],\n\n        [[ 0.0250,  0.1825, -0.0726, -0.0624, -0.1122, -0.2633,  0.1887,\n          -0.1222, -0.1818, -0.0588, -0.1243, -0.2717,  0.2647, -0.0008,\n          -0.0827],\n         [ 0.0737,  0.0620, -0.1059,  0.0104,  0.0229, -0.3546,  0.2105,\n           0.0421, -0.3234, -0.0183, -0.0643, -0.2593,  0.1713, -0.0112,\n          -0.1340],\n         [ 0.1400,  0.0787, -0.1382,  0.0712,  0.0991, -0.3531,  0.1966,\n           0.0918, -0.2964,  0.0100, -0.0681, -0.2550,  0.1680, -0.0317,\n          -0.1518],\n         [ 0.1828,  0.1128, -0.0863,  0.2503,  0.2203, -0.1676,  0.2259,\n           0.0418, -0.1701,  0.0978,  0.1026, -0.0681,  0.0622,  0.0215,\n          -0.2344]]], grad_fn=<AddBackward0>)"
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net(batch_t)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'insert'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn [78], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i, (x_batch, y_batch) \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(batch_generator(x_train[:\u001B[38;5;241m5\u001B[39m])):\n\u001B[1;32m      2\u001B[0m     \u001B[38;5;28mprint\u001B[39m(i)\n\u001B[1;32m      3\u001B[0m     \u001B[38;5;28mprint\u001B[39m(x_batch)\n",
+      "Cell \u001B[0;32mIn [75], line 14\u001B[0m, in \u001B[0;36mbatch_generator\u001B[0;34m(data, batch_size)\u001B[0m\n\u001B[1;32m     11\u001B[0m batch_ind \u001B[38;5;241m=\u001B[39m indx[bound_l:bound_r]\n\u001B[1;32m     12\u001B[0m batch \u001B[38;5;241m=\u001B[39m data[batch_ind]\n\u001B[0;32m---> 14\u001B[0m \u001B[38;5;28;01myield\u001B[39;00m \u001B[43mpreprocess_batch\u001B[49m\u001B[43m(\u001B[49m\u001B[43mbatch\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn [73], line 7\u001B[0m, in \u001B[0;36mpreprocess_batch\u001B[0;34m(batch)\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i, _ \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(batch):\n\u001B[1;32m      6\u001B[0m     seq \u001B[38;5;241m=\u001B[39m batch[i]\u001B[38;5;241m.\u001B[39mcopy()\n\u001B[0;32m----> 7\u001B[0m     seq \u001B[38;5;241m=\u001B[39m \u001B[43madd_start\u001B[49m\u001B[43m(\u001B[49m\u001B[43mseq\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      8\u001B[0m     seq \u001B[38;5;241m=\u001B[39m add_end(seq)\n\u001B[1;32m      9\u001B[0m     seq \u001B[38;5;241m=\u001B[39m add_padding(seq, amt\u001B[38;5;241m=\u001B[39mmax_len \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m2\u001B[39m \u001B[38;5;241m-\u001B[39m \u001B[38;5;28mlen\u001B[39m(seq))\n",
+      "Cell \u001B[0;32mIn [71], line 2\u001B[0m, in \u001B[0;36madd_start\u001B[0;34m(seq)\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21madd_start\u001B[39m(seq):\n\u001B[0;32m----> 2\u001B[0m     \u001B[43mseq\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43minsert\u001B[49m(\u001B[38;5;241m0\u001B[39m, w2i[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m.start\u001B[39m\u001B[38;5;124m'\u001B[39m])\n\u001B[1;32m      3\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m seq\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'numpy.ndarray' object has no attribute 'insert'"
+     ]
+    }
+   ],
    "source": [
     "for i, (x_batch, y_batch) in enumerate(batch_generator(x_train[:5])):\n",
     "    print(i)\n",
     "    print(x_batch)\n",
     "    print(y_batch)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "vocab_size=len(w2i)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "embedding_size = 32\n",
-    "hidden_size = 16\n",
-    "lstm_num_layers = 1"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "class Net(nn.Module):\n",
-    "    def __init__(self,\n",
-    "                 vocab_size,\n",
-    "                 embedding_size,\n",
-    "                 hidden_size,\n",
-    "                 lstm_num_layers) -> None:\n",
-    "        super().__init__()\n",
-    "\n",
-    "        self.embed = nn.Embedding(vocab_size, embedding_size)\n",
-    "        self.lstm = nn.LSTM(embedding_size, hidden_size, lstm_num_layers, batch_first=True)\n",
-    "        self.linear = nn.Linear(hidden_size, vocab_size)\n",
-    "\n",
-    "        def forward(self, x):\n",
-    "            input = self.embedding(x)\n",
-    "            lstm_output, (hn, cn) = self.lstm(input)\n",
-    "            output = self.linear(lstm_output)\n",
-    "            return output"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "net =  Net(vocab_size, embedding_size, hidden_size, lstm_num_layers)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "net\n"
    ],
    "metadata": {
     "collapsed": false,
