--- a/assignment_3.ipynb
+++ b/assignment_3.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -366,6 +373,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -394,7 +408,7 @@
     "\n",
     "            # forward + backward + optimize\n",
     "            outputs = mlp(x_batch)\n",
-    "            outputs = outputs.softmax(dim=-1)\n",
+    "            # outputs = outputs.softmax(dim=-1) # The input is expected to contain the unnormalized logits for each class\n",
     "            loss = criterion(outputs, y_batch)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
@@ -571,13 +585,6 @@
     "plt.title('Validation accuracy')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
